plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'drinkselector'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.mindrot:jbcrypt:0.4'




	implementation 'org.springframework.boot:spring-boot-starter-mail'

	//implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'


	// Apache Tika 의존성 추가
	implementation 'org.apache.tika:tika-core:2.8.0'   // Tika 코어 모듈
	implementation 'org.apache.tika:tika-parsers:2.8.0' // Tika 파서 모듈 (텍스트 추출 및 파일 분석


	// ND4J 의존성
	implementation "org.nd4j:nd4j-native-platform:1.0.0-beta6"


	// Apache Tika 의존성 추가
	implementation 'org.apache.tika:tika-core:2.8.0'   // Tika 코어 모듈
	implementation 'org.apache.tika:tika-parsers:2.8.0' // Tika 파서 모듈 (텍스트 추출 및 파일 분석





	implementation 'org.springframework.boot:spring-boot-starter-security'
}

tasks.named('test') {
	useJUnitPlatform()
}
